improve url checking for login redirect